# strategy_engine

./: .gitignore  LICENSE  Makefile  PATCH_NOTES.md  README.md  pyproject.toml  strategy_engine_potential_entry_review_fixes.diff
docs/: 01_current_bbb_call_contract_audit.md  02_current_bbb_file_dependency_audit.md  03_extraction_and_cutover_plan.md  04_api_compatibility_spec.md  05_initial_copy_manifest.md  06_bbb_source_inventory.csv  07_immediate_next_steps.md  08_detailed_bbb_contract_and_fastapi_replacement_audit.md  09_source_slice_provenance.md  10_ema_pullback_setups_v1.md  10_foundation_v1_implementation.md  10_indicator_strategy_market_data_runtime.md  10_managed_policy_replay.md  10_semantic_parity_gate.md  11_context_consumption_v1.md  11_ema_indicator_vertical_slice_v1.md  11_ema_pullback_composer_catalog.md  11_legacy_reference_policy.md  12_atr_indicator_vertical_slice_v1.md  12_ema_pullback_authoring_config_validation.md  12_unified_strategy_research_seam_contract.md  13_rsi_indicator_vertical_slice_v1.md  13_strategy_research_execution_contract_v1.md  14_adx_dmi_indicator_vertical_slice_v1.md  14_ema_pullback_direction_blockers_v1.md  14_ema_pullback_triggers_v1.md  15_atr_distance_indicator_vertical_slice_v1.md  15_ema_pullback_risk_entries_v1.md  16_ema_pullback_exit_policy_v1.md  16_ema_pullback_feature_plan_v1.md  17_ema_pullback_context_bundle_v1.md  18_potential_entry_touch_anchor_v1.md  19_potential_entry_implementation_review.md  20_runtime_open_trade_management_audit.md  21_runtime_open_trade_management_plan.md  22_live_projections_architecture.md  (+4 more)
(+361 files in other folders)
