[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy-engine"
version = "0.1.0"
description = "Independent Indicator Engine and Strategy Engine service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128,<1",
  "httpx>=0.28,<1",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.13,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "pandas-stubs>=2.2,<3",
]

[project.scripts]
strategy-engine = "strategy_engine.service.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["strategy_engine"]
